--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta htt-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+    <title>Gadir Hypermarket</title>
+  </head>
+  <body style="direction: rtl; text-align: center;">
+    <h1 style="color:tomato;"> </h1>
+    <h1><small><i>
+      
+    </i></small></h1>
+</html>
