creating css file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta htt-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
     <title>Gadir Hypermarket</title>
+    <link rel="stylesheet" href="style/main.css">
   </head>
   <body style="direction: rtl; text-align: center;">
     <h1 style="color:rgb(246, 42, 6);"> خرید بخشی جدایی‌ناپذیر و ناگزیر از زندگی ما است. همه ما هرازگاهی مجبور می‌شویم برای تهیه مایحتاج خود به فروشگاه‌های مختلف سر بزنیم و به خرید بپردازیم. سوپرمارکت‌ها یکی از فروشگاه‌هایی هستند که از سال‌ها پیش به رفع نیازهای روزمره ما می‌پرداختند. با این حال، امروزه، ظهور هایپرمارکت‌ها قواعد بازی را تغییر داده است. اما هایپر مارکت چیست؟
